snugom/tests/ui/searchable_on_vec.stderr
error: searchable can only be used on String fields; use filterable for numeric or enum types
  --> tests/ui/searchable_on_vec.rs:14:14
   |
14 |     #[snugom(searchable)]
   |              ^^^^^^^^^^
